# bibliocommons-history

./: .env.example  .flake8  README.md  bibliocommons.py  fivetran.py  http_client.py  libby.py  libby_scraper.py  main.py  mysql.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: deploy.yml
