[tool.poetry]
name = "bibliocommons-history"
version = "0.1.0"
description = ""
authors = ["Greg Finley <gregory.finley@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
selenium = "^4.17.2"
webdriver-manager = "^4.0.1"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.20240125"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
